--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ WP_HOME='http://example.com'
 WP_SITEURL="${WP_HOME}/wp"
 
 # Specify optional debug.log path
-# WP_DEBUG_LOG='/path/to/debug.log'
+WP_DEBUG_LOG='storage/logs'
 
 # Generate your keys here: https://roots.io/salts.html
 AUTH_KEY='generateme'
