--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
 		"roots/wp-password-bcrypt": "1.1.0",
 		"timber/timber": "^1.19",
 		"vlucas/phpdotenv": "^5.3",
-		"webmozart/assert": "^1.10"
+		"webmozart/assert": "^1.10",
+		"johnbillion/extended-cpts": "^4.5"
 	},
 	"require-dev": {
 		"brain/monkey": "^2.6",
