feat: console commands

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,10 @@
 		"timber/timber": "^1.19",
 		"vlucas/phpdotenv": "^5.3",
 		"webmozart/assert": "^1.10",
-		"johnbillion/extended-cpts": "^4.5"
+		"johnbillion/extended-cpts": "^4.5",
+		"symfony/console": "^6.0",
+		"nette/php-generator": "^3.6",
+		"illuminate/filesystem": "^8.79"
 	},
 	"require-dev": {
 		"brain/monkey": "^2.6",
