--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
 	],
 	"require": {
 		"php": "^8.0",
+		"aristath/kirki": "^4.0",
 		"composer/installers": "^1.12",
+		"filp/whoops": "^2.14",
 		"hellonico/twig-dump-extension": "^1.1",
 		"htmlburger/carbon-fields": "^3.3",
 		"htmlburger/wpemerge": "^0.16.0",
@@ -38,8 +40,7 @@
 		"symfony/console": "^6.0",
 		"timber/timber": "^1.19",
 		"vlucas/phpdotenv": "^5.3",
-		"webmozart/assert": "^1.10",
-		"aristath/kirki": "^4.0"
+		"webmozart/assert": "^1.10"
 	},
 	"require-dev": {
 		"brain/monkey": "^2.6",
