feat(request): add request and validation objects

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
 		"symfony/console": "^6.0",
 		"timber/timber": "^1.19",
 		"vlucas/phpdotenv": "^5.3",
-		"webmozart/assert": "^1.10"
+		"webmozart/assert": "^1.10",
+		"illuminate/translation": "^8.80",
+		"illuminate/validation": "^8.80"
 	},
 	"require-dev": {
 		"brain/monkey": "^2.6",
