--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
-DB_NAME='database_name'
-DB_USER='database_user'
-DB_PASSWORD='database_password'
+DB_NAME=database_name
+DB_USER=root
+DB_PASSWORD=root
 
 # Optionally, you can use a data source name (DSN)
 # When using a DSN, you can remove the DB_NAME, DB_USER, DB_PASSWORD, and DB_HOST variables
 # DATABASE_URL='mysql://database_user:database_password@database_host:database_port/database_name'
 
 # Optional database variables
-# DB_HOST='localhost'
-# DB_PREFIX='wp_'
+# DB_HOST=localhost
+# DB_PREFIX=wp_
 
-WP_ENV='development'
-WP_HOME='http://example.com'
+# Server domain name
+DOMAIN=brocker.test
+
+WP_ENV=development
+WP_HOME="http://${DOMAIN}"
 WP_SITEURL="${WP_HOME}/wp"
 
 # Specify optional debug.log path
