--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,12 @@ services:
     volumes:
       - ./:/var/www/html:delegated
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/certs:/etc/nginx/certs/self-signed
     environment:
-      DOMAIN: ${DOMAIN}
+      DOMAIN: $${DOMAIN}
     ports:
       - 80:80
+      - 443:443
     depends_on:
       - php
       - mysql
@@ -26,8 +28,8 @@ services:
     volumes:
        - ./docker/db:/var/lib/mysql:delegated
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_ROOT_PASSWORD: $${DB_PASSWORD}
+      MYSQL_DATABASE: $${DB_NAME}
     restart: always
     command: --default-authentication-plugin=mysql_native_password
     ports:
@@ -42,43 +44,46 @@ services:
     container_name: brocket-php
     volumes:
       - ./:/var/www/html:delegated
+      - ./config/php.ini:/usr/local/etc/php/conf.d/php.ini
     networks:
       - wordpress
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: brocket-phpmyadmin
-    environment:
-      PMA_HOST: ${DB_HOST}
-      PMA_PORT: 3306
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - 8082:80
-    links:
-      - mysql:mysql
-    depends_on:
-      - mysql
-    networks:
-      - wordpress
+  # phpmyadmin:
+  #   image: phpmyadmin/phpmyadmin
+  #   container_name: brocket-phpmyadmin
+  #   volumes:
+  #     - ./config/phpmyadmin.ini:/usr/local/etc/php/conf.d/phpmyadmin.ini
+  #   environment:
+  #     PMA_HOST: $${DB_HOST}
+  #     PMA_PORT: 3306
+  #     MYSQL_ROOT_PASSWORD: $${DB_PASSWORD}
+  #   ports:
+  #     - 8082:80
+  #   links:
+  #     - mysql:mysql
+  #   depends_on:
+  #     - mysql
+  #   networks:
+  #     - wordpress
 
-  wp:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: brocket-wp
-    entrypoint: ['wp', '--allow-root']
-    volumes:
-      - ./:/var/www/html:delegated
-    networks:
-      - wordpress
+  # wp:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: brocket-wp
+  #   entrypoint: ['wp', '--allow-root']
+  #   volumes:
+  #     - ./:/var/www/html:delegated
+  #   networks:
+  #     - wordpress
 
-  composer:
-    image: composer
-    container_name: brocket-composer
-    working_dir: /var/www/html
-    restart: 'no'
-    volumes:
-      - ./:/var/www/html:rw,cached
-    networks:
-      - wordpress
+  # composer:
+  #   image: composer
+  #   container_name: brocket-composer
+  #   working_dir: /var/www/html
+  #   restart: 'no'
+  #   volumes:
+  #     - ./:/var/www/html:rw,cached
+  #   networks:
+  #     - wordpress
    
