--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,22 @@ WP_ENV=development
 WP_HOME="http://${DOMAIN}"
 WP_SITEURL="${WP_HOME}/wp"
 
+# Mail options
+# Default mailer
+MAIL_MAILER=mailhog
+
+# Mail config
+MAIL_HOST=null
+MAIL_PORT=null
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
+
+# Mail information
+# If you want to specify a custom name and email address for outgoing mail, you may add the following two variables
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
+
 # Specify optional debug.log path
 WP_DEBUG_LOG='storage/logs'
 
