feat: generate salts

--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,10 @@ DB_PASSWORD=root
 # DB_PREFIX=wp_
 
 # Server domain name
-DOMAIN=brocker.test
+DOMAIN=
 
 WP_ENV=development
-WP_HOME="http://${DOMAIN}"
+WP_HOME=http://
 WP_SITEURL="${WP_HOME}/wp"
 
 # Mail options
@@ -37,6 +37,7 @@ MAIL_FROM_NAME=
 WP_DEBUG_LOG='storage/logs'
 
 # Generate your keys here: https://roots.io/salts.html
+# or run `php brocooly salts:generate`
 AUTH_KEY='generateme'
 SECURE_AUTH_KEY='generateme'
 LOGGED_IN_KEY='generateme'
