--- a/composer.json
+++ b/composer.json
@@ -104,6 +104,9 @@
 	"scripts": {
 		"post-root-package-install": [
 			"php -r \"copy('.env.example', '.env');\""
-		]
+		],
+		"post-create-project-cmd": [
+            "php brocooly salts:generate"
+        ]
 	}
 }
