chore: core rebuild

--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,10 @@ DB_PASSWORD=root
 # DB_HOST=localhost
 # DB_PREFIX=wp_
 
-# Server domain name
-DOMAIN=
-
+# Environment
 WP_ENV=development
+
+# Site and Home URLs
 WP_HOME=http://
 WP_SITEURL="${WP_HOME}/wp"
 
