--- a/framework/stubs/mix/package.json
+++ b/framework/stubs/mix/package.json
@@ -27,6 +27,7 @@
     "tailwindcss": "^3.0.18"
   },
   "devDependencies": {
+    "@wordpress/browserslist-config": "^4.1.0",
     "browser-sync": "^2.27.7",
     "browser-sync-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^4.0.0",
