--- a/composer.json
+++ b/composer.json
@@ -108,8 +108,8 @@
 		"wordpress-install-dir": "web/wp"
 	},
 	"scripts": {
-		"post-create-project-cmd": [
-			"\\Brocooly\\Console\\Composer\\PostInstall::execute"
+		"post-root-package-install": [
+			"php -r \"copy('.env.example', '.env');\""
 		]
 	}
 }
