--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"tailwindcss": "^3.0.18"
 	},
 	"devDependencies": {
+		"@wordpress/babel-preset-default": "^6.5.1",
 		"@wordpress/browserslist-config": "^4.1.0",
 		"browser-sync": "^2.27.7",
 		"browser-sync-webpack-plugin": "^2.3.0",
@@ -40,6 +41,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-webpack-plugin": "^3.1.1",
 		"laravel-mix-clean": "^0.1.0",
+		"laravel-mix-simple-image-processing": "^1.0.7",
 		"laravel-mix-versionhash": "^2.0.1",
 		"resolve-url-loader": "^5.0.0",
 		"sass": "^1.49.0",
