--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 		"filp/whoops": "^2.14",
 		"hellonico/twig-dump-extension": "^1.1",
 		"htmlburger/carbon-fields": "^3.3",
-		"htmlburger/wpemerge": "^0.16.0",
+		"htmlburger/wpemerge": "dev-master",
 		"illuminate/collections": "^8.79",
 		"illuminate/filesystem": "^8.79",
 		"illuminate/support": "^8.79",
