--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 		"filp/whoops": "^2.14",
 		"hellonico/twig-dump-extension": "^1.1",
 		"htmlburger/carbon-fields": "^3.3",
-		"htmlburger/wpemerge": "dev-master",
+		"htmlburger/wpemerge": "^0.17",
 		"illuminate/collections": "^8.79",
 		"illuminate/filesystem": "^8.79",
 		"illuminate/support": "^8.79",
@@ -41,9 +41,10 @@
 		"roots/wp-config": "1.0.0",
 		"roots/wp-password-bcrypt": "1.1.0",
 		"symfony/console": "^6.0",
-		"timber/timber": "^1.19.1",
+		"timber/timber": "^1.19.2",
 		"vlucas/phpdotenv": "^5.3",
-		"webmozart/assert": "^1.10"
+		"webmozart/assert": "^1.10",
+		"myclabs/php-enum": "^1.8"
 	},
 	"require-dev": {
 		"brain/monkey": "^2.6",
@@ -52,7 +53,7 @@
 		"roave/security-advisories": "dev-latest",
 		"squizlabs/php_codesniffer": "^3.6",
 		"wp-coding-standards/wpcs": "^2.3",
-		"wpackagist-plugin/query-monitor": "^3.8"
+		"wpackagist-plugin/query-monitor": "^3.9"
 	},
 	"repositories": [
 		{
