--- a/composer.json
+++ b/composer.json
@@ -20,32 +20,14 @@
 	"require": {
 		"php": "^8.0",
 		"composer/installers": "^1.12",
-		"czernika/brocket-framework": "dev-master",
-		"filp/whoops": "^2.14",
-		"hellonico/twig-dump-extension": "^1.1",
-		"htmlburger/carbon-fields": "^3.3",
-		"htmlburger/wpemerge": "^0.17",
-		"illuminate/collections": "^8.79",
-		"illuminate/filesystem": "^8.79",
-		"illuminate/support": "^8.79",
-		"illuminate/translation": "^8.80",
-		"illuminate/validation": "^8.80",
-		"johnbillion/extended-cpts": "^4.5",
+		"czernika/brocket-core": "dev-master",
 		"mnsami/composer-custom-directory-installer": "^2.0",
-		"nette/php-generator": "^3.6",
 		"oscarotero/env": "^2.1",
 		"roots/bedrock-autoloader": "^1.0",
 		"roots/bedrock-disallow-indexing": "^2.0",
 		"roots/wordpress": "5.7.5",
 		"roots/wp-config": "1.0.0",
-		"roots/wp-password-bcrypt": "1.1.0",
-		"symfony/console": "^6.0",
-		"timber/timber": "^1.19.2",
-		"vlucas/phpdotenv": "^5.3",
-		"webmozart/assert": "^1.10",
-		"myclabs/php-enum": "^1.8",
-		"wpackagist-plugin/kirki": "^4.0",
-		"wpackagist-plugin/clean-image-filenames": "^1.3"
+		"roots/wp-password-bcrypt": "1.1.0"
 	},
 	"require-dev": {
 		"brain/monkey": "^2.6",
@@ -66,12 +48,9 @@
 			]
 		},
 		{
-			"type": "path",
-			"url": "./framework",
-			"only": [
-				"czernika/brocket-framework"
-			]
-		}
+            "type": "vcs",
+            "url":  "git@github.com:czernika/brocket-core.git"
+        }
 	],
 	"minimum-stability": "dev",
 	"prefer-stable": true,
